unit-1-get-started-envoy-5-minutes/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: edge
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: all_domains
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/green"
                          route:
                            cluster: green
                        - match:
                            prefix: "/blue"
                          route:
                            cluster: blue
  clusters:
    - name: green
      connect_timeout: 5s
      load_assignment:
        cluster_name: green
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 5177
    - name: blue
      connect_timeout: 5s
      load_assignment:
        cluster_name: green
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 5188
